Fixed paper tray selection for the PCL 4/5/5e drivers (bug 690182). Works fine now with "-dMediaPosition=..." and for all possible trays. Needs review to see whether it does not break anything else.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9241 a1074d23-0009-0410-80fe-cf8c14f379e6